# FIOLET-AgeOfDarkness

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LOCK_v1.md  README.md  RFC-0001-Standard-Lock.md  SECURITY.md
docs/: ESAL_SPECIFICATION.md  ESV_SPEC.md  ETT_FAILURE_MODES.md  ETT_INVARIANTS.md  ETT_PROTOCOL.md  ETT_STATE_MACHINE.md  ETT_TLA_SPEC.tla  FIOLET_ENGINE_CONFORMANCE.md  FORMAL_LOCK.md  META_ESAL_SPEC.md  RFC-0001-ETT-MANDATORY.md  RFC-0002-Roadmap-v1.1.md  RFC_FIOLET_v1.1.md
python/: pyproject.toml
python/fiolet_py/: __init__.py  ett.py
python/tests/: test_ett.py
rfc/: FC_0001_FIOLET_v1.md  RFC-0001-ETT.md
src/: lib.rs
src/engine/: mod.rs
src/esal_core/: classification.rs  grounding.rs  mod.rs
src/esv/: mod.rs
src/ett/: engine.rs  mod.rs  reason.rs  state.rs  transition.rs  trigger.rs
src/meta_esal/: audit.rs  contradiction.rs  mod.rs
src/pipeline/: engine.rs
tests/: ett_adversarial_tests.rs  ett_boundary_tests.rs  ett_failure_mapping_tests.rs  ett_tests.rs  integration_tests.rs  pipeline_tests.rs  unit_tests.rs
