[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fiolet"
version = "1.0.0"
description = "Python reference binding for the FIOLET epistemic safety standard"
authors = [{ name="Adrian Maliszewski" }]
readme = "README.md"
requires-python = ">=3.9"
